# dot-conf

./: .travis.yml  Cargo.toml  README.md  dot-conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-artifacts.yml  ci.yml  python-package.yml  release.yml  tests.yml
dotconf/: __main__.py  dcconfig.py  dcutils.py
scripts/: install.sh
src/: __main__.py  dcconfig.py  dcutils.py  lib.rs  main.rs
src/dot_conf/: dcconfig.py
tests/: cli_test.rs  dcconfig_test.py  dcutils_test.py  dot_conf_test.rs  integration_test.py  testcontainer_integration_test.py
tests/fixtures/basic_config/: .bashrc  basic_config.yaml
tests/fixtures/sys_only/: .vimrc  sys_only.yaml
tests/fixtures/user_and_sys/: user_and_sys.yaml
