[package]
name = "dot-conf"
version = "0.1.0"
edition = "2021"
description = "Automatically configure modular dotfiles"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
