[package]
name = "dot-conf"
version = "0.1.0"
edition = "2021"
description = "Automatically configure modular dotfiles"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
hostname = "0.4"
libc = "0.2"
serde_yml = "0.0.12"
home = "0.5.12"
symlink = "0.1.0"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
temp-env = "0.3.6"
